@@ -1,5 +1,8 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - saving manual qc values for libraries - allow for an undefined or empty
+   list of tag indices
+
 release 59.3
  - transparent search query for autoqc objects irrespectively of the details of
    object's database implementation (in-table identifies or composition)
